fix: align result internals with working themes

--- a/apple-soft-dark.less
+++ b/apple-soft-dark.less
@@ -108,13 +108,6 @@ html body #rso > .kp-wholepage:hover {
   border-color: var(--soft-line-hover) !important;
 }
 
-html body #rso > .MjjYud > .A6K0A,
-html body #rso > .g > .A6K0A,
-html body #rso > .ULSxyf > .A6K0A,
-html body #rso > .kp-wholepage > .A6K0A {
-  border: 0 !important;
-  border-radius: 0 !important;
-}
 
 #rso,
 #center_col,
